--- a/ui/main.ui
+++ b/ui/main.ui
@@ -248,6 +248,19 @@ color: rgb(255, 255, 255);</string>
                 </property>
                </widget>
               </item>
+              <item>
+               <spacer name="verticalSpacer_7">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
              </layout>
             </item>
             <item>
